--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "luxon": "^3.3.0",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.71.8",
+    "react-native-storage": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
